--- a/src/index.css
+++ b/src/index.css
@@ -19,19 +19,28 @@ body {
 }
 
 button {
-  color: var(--green);
+  color: black;
   font-size: large;
+  border-radius: 6px;
+}
+
+button:hover {
+  cursor: pointer;
+  font-weight: bold;
 }
 
 button.button-stat {
   background-color: var(--blue);
+  color: white;
   border: solid var(--blue);
   text-align: left;
   border-bottom: solid black;
 }
 
 button:disabled {
+  cursor: default;
   opacity: 0.7;
+  font-weight: normal;
 }
 
 .clicked {
@@ -45,11 +54,31 @@ button:disabled {
 .card {
   display: flex;
   flex-direction: column;
-  background-color: var(--blue);
   padding: 3%;
   width: 16vw;
   border: solid 0.6vw var(--gold);
   border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.bug-pokemon {background-color: orange;}
+.dragon-pokemon {background-color:aquamarine;}
+.electric-pokemon {background-color: yellow;}
+.fighting-pokemon {background-color:burlywood;}
+.fire-pokemon {background-color: red;}
+.ghost-pokemon {background-color:azure;}
+.grass-pokemon {background-color: green;}
+.ground-pokemon {background-color:darkgreen;}
+.ice-pokemon {background-color: lightblue};
+.normal-pokemon {background-color: pink;}
+.poison-pokemon {background-color: purple;}
+.psychic-pokemon {background-color:darkviolet;}
+.rock-pokemon {background-color: darkgray;}
+.water-pokemon {background-color: blue;}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(9,9,9,9.9);
 }
 
 .cardButtonGroup {
@@ -64,7 +93,7 @@ button:disabled {
   justify-content: space-evenly;
   align-content: center;
   align-items: center;
-  background-color: var(--darkBlue);
+  background-color: var(--blue);
   height: 100vh;
 }
 
