--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ button:disabled {
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  margin: 20px;
 }
 
 .bug-pokemon {
@@ -156,6 +157,10 @@ button:disabled {
   flex-direction: column;
   margin-top: 2vh;
   margin-bottom: 2vh;
+}
+
+.topCards {
+  display: flex;
 }
 
 .cardsContainer {
