--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
   font-family: 'Lato', 'Gill Sans', 'Gill Sans MT', sans-serif;
   font-stretch: ultra-condensed;
+  background-color: var(--starterBackground)
 }
+
+
 :root {
   --cardEdge: #ffe78f;
   --starterBackground: #393c41;
@@ -14,6 +17,14 @@ body {
   --green: #8bc57b;
 }
 
+.titleContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.titleImage {
+  height: 18vh;
+}
 .name {
   text-align: center;
   font-weight: 700px;
@@ -50,6 +61,11 @@ button:disabled {
   font-weight: normal;
 }
 
+.arrowButtons {
+  background: transparent;
+  border: none;
+}
+
 .clicked {
   color: black;
   background-color: var(--green);
@@ -61,16 +77,42 @@ button:disabled {
 .card {
   display: flex;
   flex-direction: column;
-  padding: 4%;
+  padding: 1%;
   width: 16vw;
-  border: 10px solid gold;
   border: solid 0.6vw var(--cardEdge);
   outline: 0.1vw solid var(--gold);
   outline-offset: -0.6vw;
   border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  margin: 20px;
+  margin: 10px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(9,9,9,9.9);
+}
+
+.cardButtonGroup {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+.topCards {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.starterPageContainer {
+  height: 100%;
+}
+
+.cardsContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1%;
+
 }
 
 .bug-pokemon {
@@ -148,27 +190,4 @@ button:disabled {
   .sprite {background-image: url('../public/images/water-background.jpg');}
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(9,9,9,9.9);
-}
-
-.cardButtonGroup {
-  display: flex;
-  flex-direction: column;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
-}
-
-.topCards {
-  display: flex;
-}
-
-.cardsContainer {
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
-  align-items: center;
-  background-color: var(--blue);
-  height: 100vh;
-}
 
