--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ a {
   text-decoration: inherit;
 }
 
+.remove-button-styling {
+  background: none;
+  border: none;
+}
+
 .page-in-half {
   display: flex;
   margin: 1em;
