--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 body {
   font-family: 'Lato', 'Gill Sans', 'Gill Sans MT', sans-serif;
   background-color: var(--starterBackground);
-  height: 100%;
-  width: 100%;
-
+  min-height: 100vh;
 }
 
 @font-face {
@@ -28,7 +26,7 @@ a {
   text-decoration: inherit;
 }
 
-.remove-button-styling {
+.button-card {
   background: none;
   border: none;
 }
@@ -43,14 +41,30 @@ a {
   display: grid;
   width: 50%;
   height: 70vh;
-  padding: 0.8rem;
+  padding: 0.8em;
   background-color: var(--blue);
+  grid-gap: 0.3em;
   margin: 1em;
   flex: 1;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: auto;
-  grid-gap: 0.5rem;
   overflow-y: scroll;
+  border: solid 3px var(--cardEdge);
+}
+
+.active-pokemon-storage-box {
+  display: grid;
+  width: 50%;
+  height: 70vh;
+  padding: 0.8em;
+  background-color: var(--blue);
+  margin: 1em;
+  flex: 0.8;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  justify-items: center;
+  align-items: center;
+  border: solid 3px var(--cardEdge);
 }
 
 .small-card {
@@ -141,6 +155,11 @@ button:hover {
   border: none;
   text-align: left;
   border-bottom: solid black;
+}
+
+.button-card:disabled{
+  cursor: default;
+  opacity: 0.3;
 }
 
 .button-arrow {
