--- a/src/index.css
+++ b/src/index.css
@@ -33,18 +33,42 @@ a {
 
 .page-in-half {
   display: flex;
+  margin: 0.5em;
+}
+
+.choose-deck-titles {
+  display: flex;
   margin: 1em;
-  margin-top: 2em;
+}
+
+h2 {
+  font-family: 'BreeSerif-Regular';
+  font-size: xx-large;
+  margin: 0px;
+  padding: 0px;
+  padding-right: 0.8em;
+  padding-left: 0.8em;
+  text-align: center;
+  color: var(--cardEdge);
+}
+
+.heading-120 {
+  flex: 1;
+}
+
+.heading-80 {
+  flex: 0.8;  
 }
 
 .pokemon-storage-box {
   display: grid;
   width: 50%;
-  height: 70vh;
+  height: 60vh;
   padding: 0.8em;
   background-color: var(--blue);
   grid-gap: 0.3em;
   margin: 1em;
+  margin-top: 0;
   flex: 1;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: auto;
@@ -55,10 +79,11 @@ a {
 .active-pokemon-storage-box {
   display: grid;
   width: 50%;
-  height: 70vh;
+  height: 60vh;
   padding: 0.8em;
   background-color: var(--blue);
   margin: 1em;
+  margin-top: 0;
   flex: 0.8;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
