--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Lato', 'Gill Sans', 'Gill Sans MT', sans-serif;
   background-color: var(--starterBackground);
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 @font-face {
@@ -19,6 +19,35 @@ body {
   --purple: #242155;
   --red: #d53141;
   --green: #8bc57b;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 10vw;
+  background-color: var(--cardEdge);
+  color: var(--starterBackground);
+  font-size: small;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: -150%;
+  left: 30%;
+  /* margin-top: 5px;
+  margin-left: -60px; */
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
 
 a {
@@ -46,17 +75,30 @@ h2 {
   font-size: xx-large;
   margin: 0px;
   padding: 0px;
-  padding-right: 0.8em;
-  padding-left: 0.8em;
   text-align: center;
   color: var(--cardEdge);
 }
 
+.tooltipIcon {
+  width: 100%;
+  height: 100%;
+  /* font-size: large; */
+  font-weight: bolder;
+  background-color: var(--green);
+  color: var(--cardEdge);
+  border: solid 3px var(--cardEdge);
+  border-radius: 50%;
+  padding: 0.1em 0.2em;
+}
 .heading-120 {
+  display: flex;
+  justify-content: center;
   flex: 1;
 }
 
 .heading-80 {
+  display: flex;
+  justify-content: center;
   flex: 0.8;  
 }
 
