--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,24 @@ a {
   text-decoration: inherit;
 }
 
+.stat {
+  margin: 2%;
+  text-align: left;
+  border-bottom: solid 1px black;
+}
+
+#stat-won {
+  background-color: var(--green);
+}
+
+#stat-lost {
+  background-color: var(--red);
+}
+
+#stat-draw {
+  background-color: whitesmoke;
+}
+
 .button-card {
   background: none;
   border: none;
@@ -165,7 +183,6 @@ a {
   display: flex;
   flex-direction: column;
   border-radius: 8px;
-
 }
 
 .card-large {
@@ -176,7 +193,19 @@ a {
   width: 16vw;
   padding: 5%;
   padding-top: 0;
+  padding-bottom: 0;
 
+}
+
+.card-medium {
+  border: solid 0.4vw var(--cardEdge);
+  outline: 0.1vw solid var(--gold);
+  outline-offset: -0.4vw;
+  margin: 5px;
+  width: 14vw;
+  padding: 3%;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .card-small {
@@ -203,6 +232,12 @@ a {
   margin: 10px;
 }
 
+.card-medium .name {
+  letter-spacing: 2px;
+  padding: 0px;
+  margin: 6px;
+}
+
 .card-small .name {
   font-size: large;
   letter-spacing: 1px;
@@ -214,9 +249,19 @@ a {
   display: flex;
 }
 
+.card .sprite-container {
+  display: flex;
+  justify-content: center;
+}
+
 .card-large .sprite {
   width: 15vw;
   border: solid 0.6vw var(--cardEdge);
+}
+
+.card-medium .sprite {
+  width: 12vw;
+  border: solid 0.3vw var(--cardEdge);
 }
 
 .card-small .sprite {
@@ -232,23 +277,6 @@ button {
   border-radius: 6px;
 }
 
-button:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.button-stat:disabled {
-  cursor: default;
-  font-weight: normal;
-}
-
-.button-stat {
-  background: transparent;
-  border: none;
-  text-align: left;
-  border-bottom: solid black;
-}
-
 .button-card:disabled{
   cursor: default;
   opacity: 0.3;
@@ -259,13 +287,30 @@ button:hover {
   border: none;
 }
 
-.stat-button-clicked {
-  color: black;
-  background-color: var(--green);
-  border: solid var(--blue);
-  text-align: left;
-  border-bottom: solid black;
+.button-stat {
+  width: 8vw;
+  height: 8vw;
+  border-radius: 50%;
+  border: solid 0.2vw var(--cardEdge);
 }
+
+.button-stat:disabled {
+  opacity: 0.7;
+}
+
+.button-stat:disabled:hover {
+  box-shadow: none;
+  cursor: default;
+}
+
+.button-stat:hover {
+  box-shadow: 0 0px 8px 8px rgb(255, 231, 143);
+  cursor: pointer;
+}
+
+#hp, #special-attack {background-color: var(--blue);}
+#attack, #special-defense {background-color: var(--yellow);}
+#defense, #speed {background-color: var(--red);}
 
 /* Button Groups */
 
@@ -274,6 +319,12 @@ button:hover {
   flex-direction: column;
   margin-top: 2vh;
   margin-bottom: 2vh;
+}
+
+.stat-select-button-group {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1%;
 }
 
 /* Image classes */
