--- a/src/index.css
+++ b/src/index.css
@@ -226,21 +226,6 @@ a {
   flex-direction: row-reverse;
 }
 
-@keyframes moveBus{
-  0% {
-  left: 18%;
-  }
-  25% {
-    left: 80%
-  }
-  75% {
-  left: 18%;
-  }
-  100% {
-    left: 0;
-  }
-}
-
 
 .button-card {
   background: none;
@@ -248,8 +233,51 @@ a {
   
 }
 
-.move {
-  animation: moveBus 9s ease-in-out forwards;
+@keyframes move-right{
+  0% {left: 40%;}
+  10% {left: 42%;}
+  20% {left: 44%;}
+  30% {left: 46%;}
+  40% {left: 48%;}
+  50% {left: 50%}
+  60% {left: 48%;}
+  70% {left: 46%;}
+  80% {left: 44%;}
+  90% {left: 42%;}
+  100% {left: 40%;}
+}
+
+@keyframes move-left{
+  0% {left: 40%;}
+  10% {left: 38%;}
+  20% {left: 36%;}
+  30% {left: 34%;}
+  40% {left: 32%;}
+  50% {left: 30%}
+  60% {left: 32%;}
+  70% {left: 34%;}
+  80% {left: 36%;}
+  90% {left: 38%;}
+  100% {left: 40%;}
+}
+
+.winning-result {
+  position: absolute;
+  width: 300px;
+}
+
+.player-attack {
+  position: absolute;
+  animation: move-right 0.5s;
+}
+
+.no-attack {
+  position: absolute;
+}
+
+.enemy-attack {
+  position: absolute;
+  animation: move-left 0.5s;
 }
 
 .page-in-half {
