--- a/src/index.css
+++ b/src/index.css
@@ -22,64 +22,6 @@ body {
   --green: #8bc57b;
 }
 
-.wrapper{
-  position: absolute;
-  width: 100%;
-}
-
-.moving-van{
-  position: absolute;
-  width: 100px;
-  z-index: 10;
-  left: 18%;
-  animation: moveBus 9s ease-in-out forwards;
-}
-
-.moving-van2{
-  position: absolute;
-  width: 100px;
-  z-index: 10;
-  left: -10%;
-  animation: moveBus2 4s ease-in-out 5.5s forwards;
-}
-
-/* @keyframes moveBus{
-  0% {
-  left: 18%;
-  }
-  25% {
-    left: 80%
-  }
-  75% {
-  left: 18%;
-  }
-  100% {
-    left: 0;
-  }
-} */
-
-@keyframes moveBus2{
-  0% {
-  left: -10%;
-  }
-  100% {
-  left: 18%;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .margin-top-ten {
   margin-top: 10px;
 }
@@ -244,7 +186,9 @@ a {
   35% {left: 47%; top: 32%; rotate: 35deg;}
   40% {left: 48%; top: 33%; rotate: 40deg;}
   45% {left: 49%; top: 34%; rotate: 35deg;}
-  50% {left: 50%; top: 35%; rotate: 30deg;}
+  50% {left: 50%; top: 35%; rotate: 30deg; box-shadow: 0px 0px 30px 10px red;
+    background-color: red;
+    opacity: 0.7;}
   55% {left: 49%; top: 34%; rotate: 25deg;}
   60% {left: 48%; top: 33%; rotate: 20deg;}
   65% {left: 47%; top: 32%; rotate: 15deg;}
@@ -258,50 +202,124 @@ a {
 }
 
 @keyframes player-fail{
-  0% {left: 40%; top: 25%; rotate: 0deg;}
-  5% {left: 42%; top: 27%; rotate: 10deg;}
-  10% {left: 44%; top: 29%; rotate: 20deg;}
-  15% {left: 46%; top: 31%; rotate: 30deg;}
-  20% {left: 48%; top: 33%; rotate: 40deg;}
-  25% {left: 50%; top: 35%; rotate: 20deg;}
-  30% {left: 48%; top: 33%; rotate: 0deg;}
-  35% {left: 46%; top: 31%; rotate: -20deg;}
-  40% {left: 44%; top: 29%; rotate: -40deg;}
-  45% {left: 42%; top: 27%; rotate: -60deg;}
-  50% {left: 40%; top: 25%; rotate: -80deg;}
-  55% {left: 38%; rotate: -100deg;}
-  60% {left: 36%; rotate: -120deg;}
-  65% {left: 34%; rotate: -140deg;}
-  70% {left: 32%; rotate: -160deg;}
-  75% {left: 30%; rotate: -180deg;}
-  80% {left: 32%;}
-  85% {left: 34%;}
+  0% {left: 40%; rotate: 0deg;}
+  2% {left: 41%; rotate: 5deg;}
+  4% {left: 42%; rotate: 10deg;}
+  6% {left: 43%; rotate: 15deg;}
+  8% {left: 44%; rotate: 20deg;}
+  10% {left: 45%; rotate: 25deg;}
+  12% {left: 46%; rotate: 30deg;}
+  14% {left: 47%; rotate: 35deg;}
+  16% {left: 48%; rotate: 40deg;}
+  18% {left: 49%; rotate: 35deg;}
+  20% {left: 50%; rotate: 30deg; box-shadow: 0px 0px 30px 10px red;
+    background-color: red;
+    opacity: 0.7;}
+  22% {left: 49%; rotate: 30deg;}
+  24% {left: 48%; rotate: 30deg;}
+  26% {left: 47%; rotate: 30deg;}
+  28% {left: 48%; rotate: 30deg;}
+  30% {left: 49%; rotate: 30deg;}
+  32% {left: 50%; rotate: 30deg; box-shadow: 0px 0px 50px 10px red;
+    background-color: red;
+    opacity: 0.7;}
+  34% {left: 49%; rotate: 30deg;}
+  36% {left: 48%; rotate: 30deg;}
+  38% {left: 47%; rotate: 30deg;}
+  40% {left: 48%; rotate: 30deg;}
+  42% {left: 49%; rotate: 30deg;}
+  44% {left: 50%; rotate: 30deg; box-shadow: 0px 0px 70px 10px red;
+    background-color: red;
+    opacity: 0.7;}
+  46% {left: 49%; rotate: 25deg;}
+  48% {left: 48%; rotate: 20deg;}
+  50% {left: 47%; rotate: 15deg;}
+  52% {left: 46%; rotate: 10deg;}
+  54% {left: 45%; rotate: 5deg;}
+  56% {left: 44%; rotate: 0deg;}
+  58% {left: 42%;}
+  60% {left: 40%;}
+  62% {left: 38%;}
+  64% {left: 37%;}
+  66% {left: 36%;}
+  68% {left: 34%;}
+  70% {left: 32%;}
+  72% {left: 30%; box-shadow: 0px 0px 30px 10px blue;
+    background-color: blue; opacity: 0.7;}
+  74% {left: 31%;}
+  76% {left: 32%;}
+  78% {left: 33%;}
+  80% {left: 34%;}
+  82% {left: 34%;}
+  84% {left: 35%;}
+  86% {left: 35%;}
+  88% {left: 36%;}
   90% {left: 36%;}
-  95% {left: 38%;}
+  92% {left: 37%;}
+  94% {left: 37%;}
+  96% {left: 38%;}
+  98% {left: 39%;}
   100% {left: 40%;}
 }
 
 @keyframes enemy-fail{
-  0% {left: 40%; top: 25%; rotate: 0deg;}
-  5% {left: 38%; top: 27%; rotate: -10deg;}
-  10% {left: 36%; top: 29%; rotate: -20deg;}
-  15% {left: 34%; top: 31%; rotate: -30deg;}
-  20% {left: 32%; top: 33%; rotate: -40deg;}
-  25% {left: 30%; top: 35%; rotate: -20deg;}
-  30% {left: 32%; top: 33%; rotate: 0deg;}
-  35% {left: 34%; top: 31%; rotate: 20deg;}
-  40% {left: 36%; top: 29%; rotate: 40deg;}
-  45% {left: 38%; top: 27%; rotate: 60deg;}
-  50% {left: 40%; top: 25%; rotate: 80deg;}
-  55% {left: 42%; rotate: 100deg;}
-  60% {left: 44%; rotate: 120deg;}
-  65% {left: 46%; rotate: 140deg;}
-  70% {left: 48%; rotate: 160deg;}
-  75% {left: 50%; rotate: 180deg;}
-  80% {left: 48%;}
-  85% {left: 46%;}
+  0% {left: 40%; rotate: 0deg;}
+  2% {left: 39%; rotate: 5deg;}
+  4% {left: 38%; rotate: 10deg;}
+  6% {left: 37%; rotate: 15deg;}
+  8% {left: 36%; rotate: 20deg;}
+  10% {left: 35%; rotate: 25deg;}
+  12% {left: 34%; rotate: 30deg;}
+  14% {left: 33%; rotate: 35deg;}
+  16% {left: 32%; rotate: 40deg;}
+  18% {left: 31%; rotate: 35deg;}
+  20% {left: 30%; rotate: 30deg; box-shadow: 0px 0px 30px 10px blue;
+    background-color: blue;
+    opacity: 0.7;}
+  22% {left: 31%; rotate: 30deg;}
+  24% {left: 32%; rotate: 30deg;}
+  26% {left: 33%; rotate: 30deg;}
+  28% {left: 32%; rotate: 30deg;}
+  30% {left: 31%; rotate: 30deg;}
+  32% {left: 30%; rotate: 30deg; box-shadow: 0px 0px 50px 10px blue;
+    background-color: blue;
+    opacity: 0.7;}
+  34% {left: 31%; rotate: 30deg;}
+  36% {left: 32%; rotate: 30deg;}
+  38% {left: 33%; rotate: 30deg;}
+  40% {left: 32%; rotate: 30deg;}
+  42% {left: 31%; rotate: 30deg;}
+  44% {left: 30%; rotate: 30deg; box-shadow: 0px 0px 70px 10px blue;
+    background-color: blue;
+    opacity: 0.7;}
+  46% {left: 31%; rotate: 25deg;}
+  48% {left: 32%; rotate: 20deg;}
+  50% {left: 33%; rotate: 15deg;}
+  52% {left: 34%; rotate: 10deg;}
+  54% {left: 35%; rotate: 5deg;}
+  56% {left: 36%; rotate: 0deg;}
+  58% {left: 38%;}
+  60% {left: 40%;}
+  62% {left: 42%;}
+  64% {left: 43%;}
+  66% {left: 45%;}
+  68% {left: 47%;}
+  70% {left: 49%;}
+  72% {left: 50%; box-shadow: 0px 0px 30px 10px red;
+    background-color: red; opacity: 0.7;}
+  74% {left: 49%;}
+  76% {left: 48%;}
+  78% {left: 47%;}
+  80% {left: 46%;}
+  82% {left: 46%;}
+  84% {left: 45%;}
+  86% {left: 45%;}
+  88% {left: 44%;}
   90% {left: 44%;}
-  95% {left: 42%;}
+  92% {left: 43%;}
+  94% {left: 43%;}
+  96% {left: 42%;}
+  98% {left: 41%;}
   100% {left: 40%;}
 }
 
@@ -340,13 +358,14 @@ a {
   35% {left: 33%; top: 32%; rotate: -35deg;}
   40% {left: 32%; top: 33%; rotate: -40deg;}
   45% {left: 31%; top: 34%; rotate: -35deg;}
-  50% {left: 30%; top: 35%; rotate: -30deg;}
+  50% {left: 30%; top: 35%; rotate: -30deg; left: 30%; box-shadow: 0px 0px 30px 10px blue;
+    background-color: blue; opacity: 0.7;}
   55% {left: 31%; top: 34%; rotate: -25deg;}
   60% {left: 32%; top: 33%; rotate: -20deg;}
   65% {left: 33%; top: 32%; rotate: -15deg;}
   70% {left: 34%; top: 31%; rotate: -10deg;}
   75% {left: 35%; top: 30%; rotate: -5deg;}
-  80% {left: 35%; top: 29%; rotate: -0deg;}
+  80% {left: 36%; top: 29%; rotate: -0deg;}
   85% {left: 37%; top: 28%;}
   90% {left: 38%; top: 27%;}
   95% {left: 39%; top: 26%;}
@@ -360,31 +379,43 @@ a {
 
 .player-attack-successful {
   position: absolute;
+  border-radius: 50%;
+  width: 300px;
   animation: player-success 0.5s;
 }
 
 .draw {
   position: absolute;
+  border-radius: 50%;
+  width: 300px;
   animation: draw 1s;
 }
 
 .player-attack-unsuccessful {
   position: absolute;
+  width: 300px;
+  border-radius: 50%;
   animation: player-fail 1s;
 }
 
 .enemy-attack-successful {
   position: absolute;
+  width: 300px;
+  border-radius: 50%;
   animation: enemy-success 0.5s;
 }
 
 .enemy-attack-unsuccessful {
   position: absolute;
+  width: 300px;
+  border-radius: 50%;
   animation: enemy-fail 1s;
 }
 
 .no-attack {
   position: absolute;
+  width: 300px;
+  border-radius: 50%;
 }
 
 .page-in-half {
@@ -409,7 +440,6 @@ a {
 .tooltipIcon {
   width: 100%;
   height: 100%;
-  /* font-size: large; */
   font-weight: bolder;
   background-color: var(--green);
   color: var(--cardEdge);
