--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body {
   --purple: #242155;
   --red: #d53141;
   --green: #8bc57b;
+  --gradient1: radial-gradient(circle, rgba(0,117,190,1) 10%, rgba(213,49,65,1) 30%, rgba(139,197,123,1) 50%, rgba(255,204,0,1) 70%, rgba(255,231,143,1) 90%);
+  --gradient2: radial-gradient(circle, rgba(255,231,143,1) 10%, rgba(0,117,190,1) 30%, rgba(255,204,0,1) 50%, rgba(213,49,65,1) 70%, rgba(139,197,123,1) 90%);
 }
 
 .margin-top-ten {
@@ -175,247 +177,10 @@ a {
   
 }
 
-@keyframes player-success{
-  0% {left: 40%; top: 25%; rotate: 0deg;}
-  5% {left: 41%; top: 26%; rotate: 5deg;}
-  10% {left: 42%; top: 27%; rotate: 10deg;}
-  15% {left: 43%; top: 28%; rotate: 15deg;}
-  20% {left: 44%; top: 29%; rotate: 20deg;}
-  25% {left: 45%; top: 30%; rotate: 25deg;}
-  30% {left: 46%; top: 31%; rotate: 30deg;}
-  35% {left: 47%; top: 32%; rotate: 35deg;}
-  40% {left: 48%; top: 33%; rotate: 40deg;}
-  45% {left: 49%; top: 34%; rotate: 35deg;}
-  50% {left: 50%; top: 35%; rotate: 30deg; box-shadow: 0px 0px 30px 10px red;
-    background-color: red;
-    opacity: 0.7;}
-  55% {left: 49%; top: 34%; rotate: 25deg;}
-  60% {left: 48%; top: 33%; rotate: 20deg;}
-  65% {left: 47%; top: 32%; rotate: 15deg;}
-  70% {left: 46%; top: 31%; rotate: 10deg;}
-  75% {left: 45%; top: 30%; rotate: 5deg;}
-  80% {left: 44%; top: 29%; rotate: 0deg;}
-  85% {left: 43%; top: 28%;}
-  90% {left: 42%; top: 27%;}
-  95% {left: 41%; top: 26%;}
-  100% {left: 40%; top: 25%;}
-}
-
-@keyframes player-fail{
-  0% {left: 40%; rotate: 0deg;}
-  2% {left: 41%; rotate: 5deg;}
-  4% {left: 42%; rotate: 10deg;}
-  6% {left: 43%; rotate: 15deg;}
-  8% {left: 44%; rotate: 20deg;}
-  10% {left: 45%; rotate: 25deg;}
-  12% {left: 46%; rotate: 30deg;}
-  14% {left: 47%; rotate: 35deg;}
-  16% {left: 48%; rotate: 40deg;}
-  18% {left: 49%; rotate: 35deg;}
-  20% {left: 50%; rotate: 30deg; box-shadow: 0px 0px 30px 10px red;
-    background-color: red;
-    opacity: 0.7;}
-  22% {left: 49%; rotate: 30deg;}
-  24% {left: 48%; rotate: 30deg;}
-  26% {left: 47%; rotate: 30deg;}
-  28% {left: 48%; rotate: 30deg;}
-  30% {left: 49%; rotate: 30deg;}
-  32% {left: 50%; rotate: 30deg; box-shadow: 0px 0px 50px 10px red;
-    background-color: red;
-    opacity: 0.7;}
-  34% {left: 49%; rotate: 30deg;}
-  36% {left: 48%; rotate: 30deg;}
-  38% {left: 47%; rotate: 30deg;}
-  40% {left: 48%; rotate: 30deg;}
-  42% {left: 49%; rotate: 30deg;}
-  44% {left: 50%; rotate: 30deg; box-shadow: 0px 0px 70px 10px red;
-    background-color: red;
-    opacity: 0.7;}
-  46% {left: 49%; rotate: 25deg;}
-  48% {left: 48%; rotate: 20deg;}
-  50% {left: 47%; rotate: 15deg;}
-  52% {left: 46%; rotate: 10deg;}
-  54% {left: 45%; rotate: 5deg;}
-  56% {left: 44%; rotate: 0deg;}
-  58% {left: 42%;}
-  60% {left: 40%;}
-  62% {left: 38%;}
-  64% {left: 37%;}
-  66% {left: 36%;}
-  68% {left: 34%;}
-  70% {left: 32%;}
-  72% {left: 30%; box-shadow: 0px 0px 30px 10px blue;
-    background-color: blue; opacity: 0.7;}
-  74% {left: 31%;}
-  76% {left: 32%;}
-  78% {left: 33%;}
-  80% {left: 34%;}
-  82% {left: 34%;}
-  84% {left: 35%;}
-  86% {left: 35%;}
-  88% {left: 36%;}
-  90% {left: 36%;}
-  92% {left: 37%;}
-  94% {left: 37%;}
-  96% {left: 38%;}
-  98% {left: 39%;}
-  100% {left: 40%;}
-}
-
-@keyframes enemy-fail{
-  0% {left: 40%; rotate: 0deg;}
-  2% {left: 39%; rotate: -5deg;}
-  4% {left: 38%; rotate: -10deg;}
-  6% {left: 37%; rotate: -15deg;}
-  8% {left: 36%; rotate: -20deg;}
-  10% {left: 35%; rotate: -25deg;}
-  12% {left: 34%; rotate: -30deg;}
-  14% {left: 33%; rotate: -35deg;}
-  16% {left: 32%; rotate: -40deg;}
-  18% {left: 31%; rotate: -35deg;}
-  20% {left: 30%; rotate: -30deg; box-shadow: 0px 0px 30px 10px blue;
-    background-color: blue;
-    opacity: 0.7;}
-  22% {left: 31%; rotate: -30deg;}
-  24% {left: 32%; rotate: -30deg;}
-  26% {left: 33%; rotate: -30deg;}
-  28% {left: 32%; rotate: -30deg;}
-  30% {left: 31%; rotate: -30deg;}
-  32% {left: 30%; rotate: -30deg; box-shadow: 0px 0px 50px 10px blue;
-    background-color: blue;
-    opacity: 0.7;}
-  34% {left: 31%; rotate: -30deg;}
-  36% {left: 32%; rotate: -30deg;}
-  38% {left: 33%; rotate: -30deg;}
-  40% {left: 32%; rotate: -30deg;}
-  42% {left: 31%; rotate: -30deg;}
-  44% {left: 30%; rotate: -30deg; box-shadow: 0px 0px 70px 10px blue;
-    background-color: blue;
-    opacity: 0.7;}
-  46% {left: 31%; rotate: -25deg;}
-  48% {left: 32%; rotate: -20deg;}
-  50% {left: 33%; rotate: -15deg;}
-  52% {left: 34%; rotate: -10deg;}
-  54% {left: 35%; rotate: -5deg;}
-  56% {left: 36%; rotate: -0deg;}
-  58% {left: 38%;}
-  60% {left: 40%;}
-  62% {left: 42%;}
-  64% {left: 43%;}
-  66% {left: 45%;}
-  68% {left: 47%;}
-  70% {left: 49%;}
-  72% {left: 50%; box-shadow: 0px 0px 30px 10px red;
-    background-color: red; opacity: 0.7;}
-  74% {left: 49%;}
-  76% {left: 48%;}
-  78% {left: 47%;}
-  80% {left: 46%;}
-  82% {left: 46%;}
-  84% {left: 45%;}
-  86% {left: 45%;}
-  88% {left: 44%;}
-  90% {left: 44%;}
-  92% {left: 43%;}
-  94% {left: 43%;}
-  96% {left: 42%;}
-  98% {left: 41%;}
-  100% {left: 40%;}
-}
-
-@keyframes draw{
-  0% {left: 40%;}
-  5% {left: 41%;}
-  10% {left: 40%;}
-  15% {left: 39%;}
-  20% {left: 40%;}
-  25% {left: 41%;}
-  30% {left: 40%;}
-  35% {left: 39%;}
-  40% {left: 40%;}
-  45% {left: 41%;}
-  50% {left: 40%;}
-  55% {left: 39%;}
-  60% {left: 40%;}
-  65% {left: 41%;}
-  70% {left: 40%;}
-  75% {left: 39%;}
-  80% {left: 40%;}
-  85% {left: 41%;}
-  90% {left: 40%;}
-  95% {left: 39%;}
-  100% {left: 40%;}
-}
-
-@keyframes enemy-success{
-  0% {left: 40%; top: 25%; rotate: 0deg;}
-  5% {left: 39%; top: 26%; rotate: -5deg;}
-  10% {left: 38%; top: 27%; rotate: -10deg;}
-  15% {left: 37%; top: 28%; rotate: -15deg;}
-  20% {left: 36%; top: 29%; rotate: -20deg;}
-  25% {left: 35%; top: 30%; rotate: -25deg;}
-  30% {left: 34%; top: 31%; rotate: -30deg;}
-  35% {left: 33%; top: 32%; rotate: -35deg;}
-  40% {left: 32%; top: 33%; rotate: -40deg;}
-  45% {left: 31%; top: 34%; rotate: -35deg;}
-  50% {left: 30%; top: 35%; rotate: -30deg; left: 30%; box-shadow: 0px 0px 30px 10px blue;
-    background-color: blue; opacity: 0.7;}
-  55% {left: 31%; top: 34%; rotate: -25deg;}
-  60% {left: 32%; top: 33%; rotate: -20deg;}
-  65% {left: 33%; top: 32%; rotate: -15deg;}
-  70% {left: 34%; top: 31%; rotate: -10deg;}
-  75% {left: 35%; top: 30%; rotate: -5deg;}
-  80% {left: 36%; top: 29%; rotate: -0deg;}
-  85% {left: 37%; top: 28%;}
-  90% {left: 38%; top: 27%;}
-  95% {left: 39%; top: 26%;}
-  100% {left: 40%; top: 25%;}
-}
 
 .winning-result {
   position: absolute;
   width: 300px;
-}
-
-.player-attack-successful {
-  position: absolute;
-  border-radius: 50%;
-  width: 300px;
-  animation: player-success 0.5s;
-}
-
-.draw {
-  position: absolute;
-  border-radius: 50%;
-  width: 300px;
-  animation: draw 1s;
-}
-
-.player-attack-unsuccessful {
-  position: absolute;
-  width: 300px;
-  border-radius: 50%;
-  animation: player-fail 1s;
-}
-
-.enemy-attack-successful {
-  position: absolute;
-  width: 300px;
-  border-radius: 50%;
-  animation: enemy-success 0.5s;
-}
-
-.enemy-attack-unsuccessful {
-  position: absolute;
-  width: 300px;
-  border-radius: 50%;
-  animation: enemy-fail 1s;
-}
-
-.no-attack {
-  position: absolute;
-  width: 300px;
-  border-radius: 50%;
 }
 
 .page-in-half {
