--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,13 @@ body {
   --purple: #242155;
   --red: #d53141;
   --green: #8bc57b;
-  --gradient1: radial-gradient(circle, rgba(0,117,190,1) 10%, rgba(213,49,65,1) 30%, rgba(139,197,123,1) 50%, rgba(255,204,0,1) 70%, rgba(255,231,143,1) 90%);
-  --gradient2: radial-gradient(circle, rgba(255,231,143,1) 10%, rgba(0,117,190,1) 30%, rgba(255,204,0,1) 50%, rgba(213,49,65,1) 70%, rgba(139,197,123,1) 90%);
+  --gradient1:radial-gradient(circle, rgba(57,60,65,1) 0%, rgba(255,231,143,1) 10%, rgba(57,60,65,1) 20%, rgba(255,231,143,1) 30%, rgba(57,60,65,1) 40%, rgba(255,231,143,1) 50%, rgba(57,60,65,1) 60%, rgba(255,231,143,1) 70%, rgba(57,60,65,1) 80%, rgba(255,231,143,1) 90%, rgba(57,60,65,1) 100%);
+  --gradient2:radial-gradient(circle, rgba(57,60,65,1) 10%, rgba(255,231,143,1) 20%, rgba(57,60,65,1) 30%, rgba(255,231,143,1) 40%, rgba(57,60,65,1) 50%, rgba(255,231,143,1) 60%, rgba(57,60,65,1) 70%, rgba(255,231,143,1) 80%, rgba(57,60,65,1) 90%, rgba(255,231,143,1) 100%, rgba(57,60,65,1) 0%);
+  --gradient3:radial-gradient(circle, rgba(57,60,65,1) 0%, rgba(255,231,143,1) 10%, rgba(57,60,65,1) 20%, rgba(255,231,143,1) 30%, rgba(57,60,65,1) 40%, rgba(255,231,143,1) 50%, rgba(57,60,65,1) 60%, rgba(255,231,143,1) 70%, rgba(57,60,65,1) 80%, rgba(255,231,143,1) 89%, rgba(57,60,65,1) 100%);
+  --gradient4:radial-gradient(circle, rgba(57,60,65,1) 0%, rgba(255,231,143,1) 10%, rgba(57,60,65,1) 20%, rgba(255,231,143,1) 30%, rgba(57,60,65,1) 40%, rgba(255,231,143,1) 50%, rgba(57,60,65,1) 60%, rgba(255,231,143,1) 70%, rgba(57,60,65,1) 80%, rgba(255,231,143,1) 89%, rgba(57,60,65,1) 100%);
+  --gradient5:radial-gradient(circle, rgba(57,60,65,1) 0%, rgba(255,231,143,1) 10%, rgba(57,60,65,1) 20%, rgba(255,231,143,1) 30%, rgba(57,60,65,1) 40%, rgba(255,231,143,1) 50%, rgba(57,60,65,1) 60%, rgba(255,231,143,1) 70%, rgba(57,60,65,1) 80%, rgba(255,231,143,1) 89%, rgba(57,60,65,1) 100%);
+  --gradient6:radial-gradient(circle, rgba(57,60,65,1) 0%, rgba(255,231,143,1) 10%, rgba(57,60,65,1) 20%, rgba(255,231,143,1) 30%, rgba(57,60,65,1) 40%, rgba(255,231,143,1) 50%, rgba(57,60,65,1) 60%, rgba(255,231,143,1) 70%, rgba(57,60,65,1) 80%, rgba(255,231,143,1) 89%, rgba(57,60,65,1) 100%);
+
 }
 
 .margin-top-ten {
